--- a/index.html
+++ b/index.html
@@ -186,16 +186,24 @@
 							<a class="nav-link" href="miners.html"><i class="fas fa-users sidemenu-icon"></i><span
 									class="sidemenu-label">Miners</span></a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="api.html"><i class="fas fa-project-diagram sidemenu-icon"></i><span
 									class="sidemenu-label">API</span></a>
-						</li>
+						</li> -->
 						<li class="nav-item">
-							<a class="nav-link" href="help.html"><i class="fas fa-question-circle sidemenu-icon"></i></i><span
-									class="sidemenu-label">Help</span></a>
-						</li>
+							<a class="nav-link with-sub" href="#"><i class="fas fa-question-circle sidemenu-icon"></i><span
+									class="sidemenu-label">Help</span><i class="angle fe fe-chevron-right"></i></a>
+							<ul class="nav-sub" style="display: none;">
+								<li class="nav-sub-item">
+									<a class="nav-sub-link" href="faq.html">FAQ</a>
+								</li>
+								<li class="nav-sub-item">
+									<a class="nav-sub-link" href="getting-started.html">Getting Started</a>
+								</li>
 							</ul>
 						</li>
+					</ul>
+					</li>
 					</ul>
 				</div>
 			</div>
@@ -822,7 +830,8 @@
 														<tr class="border-bottom-0">
 															<td class="coin_icon d-flex">
 																<div class="table-crypto">
-																	<i class="fas fa-users"></i>										</div>
+																	<i class="fas fa-users"></i>
+																</div>
 																<span class="my-auto">
 																	<b class="font-weight-medium">1691164</b></span>
 															</td>
@@ -839,7 +848,8 @@
 														<tr class="border-bottom-0">
 															<td class="coin_icon d-flex">
 																<div class="table-crypto">
-																	<i class="fas fa-users"></i>											</div>
+																	<i class="fas fa-users"></i>
+																</div>
 																<span class="my-auto">
 																	<b class="font-weight-medium">1692146</b></span>
 															</td>
@@ -856,7 +866,8 @@
 														<tr class="border-bottom-0">
 															<td class="coin_icon d-flex">
 																<div class="table-crypto">
-																	<i class="fas fa-users"></i>												</div>
+																	<i class="fas fa-users"></i>
+																</div>
 																<span class="my-auto">
 																	<b class="font-weight-medium">1692154</b></span>
 															</td>
@@ -874,7 +885,8 @@
 														<tr class="border-bottom-0">
 															<td class="coin_icon d-flex">
 																<div class="table-crypto">
-																	<i class="fas fa-users"></i>														</div>
+																	<i class="fas fa-users"></i>
+																</div>
 																<span class="my-auto">
 																	<b class="font-weight-medium">1696182</b></span>
 															</td>
@@ -1405,7 +1417,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<span>Copyright © 2021 <a href="index.html">EgyptMiners All rights
-								reserved.</span>
+									reserved.</span>
 						</div>
 					</div>
 				</div>
