--- a/index.html
+++ b/index.html
@@ -65,29 +65,9 @@
 				<div class="form_holder sidebar-right1">
 					<div class="row">
 						<div class="predefined_styles">
-							<div class="swichermainleft text-center">
-								<div class="p-3">
-									<a href="https://www.spruko.com/demo/dashpro/index.html" class="btn btn-primary btn-block mt-0">View
-										Demo</a>
-									<a href="https://themeforest.net/user/spruko/portfolio" class="btn btn-secondary btn-block">Buy
-										Now</a>
-									<a href="https://themeforest.net/user/spruko/portfolio" class="btn btn-info btn-block">Our
-										Portfolio</a>
-								</div>
-							</div>
-							<div class="swichermainleft mb-4">
-								<h4>Navigation Style</h4>
-								<div class="pl-3 pr-3 pt-3">
-									<a class="btn btn-primary btn-block"
-										href="https://www.spruko.com/demo/dashpro/Dashpro/HTML-LTR/Horizontal-light/index.html">
-										Horizontal
-									</a>
-									<a class="btn btn-secondary btn-block" href="index.html">
-										Leftmenu</a>
-								</div>
-							</div>
+							
 							<div class="swichermainleft">
-								<h4>Ions Styles</h4>
+								<h4>Theme Styles</h4>
 								<div class="switch_section my-2">
 									<div class="switch-toggle d-flex">
 										<span class="mr-auto">Theme Style</span>
@@ -105,7 +85,7 @@
 											<label for="myonoffswitch53" class="onoffswitch2-label"></label>
 										</div>
 									</div>
-								</div>
+								</div	>
 							</div>
 							<div class="swichermainleft">
 								<h4>Theme Layout</h4>
@@ -235,16 +215,6 @@
 						</div>
 					</div>
 					<div class="main-header-right">
-						<div class="dropdown d-md-flex header-settings">
-							<a href="#" class="nav-link icon" data-toggle="sidebar-right" data-target=".sidebar-right">
-								<i class="header-icons"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24"
-										width="24">
-										<path d="M0 0h24v24H0V0z" fill="none" />
-										<path
-											d="M3 17v2h6v-2H3zM3 5v2h10V5H3zm10 16v-2h8v-2h-8v-2h-2v6h2zM7 9v2H3v2h4v2h2V9H7zm14 4v-2H11v2h10zm-6-4h2V7h4V5h-4V3h-2v6z" />
-									</svg></i>
-							</a>
-						</div>
 						<div class="dropdown main-header-notification">
 							<a class="nav-link icon" href="#">
 								<i class="header-icons"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24"
@@ -263,7 +233,7 @@
 										</span>
 										<div>
 											<span class="font-weight-bold text-dark">
-												New file Uploaded
+												New miner added
 											</span>
 											<div class="small text-muted d-flex">5 hour ago</div>
 										</div>
@@ -284,7 +254,7 @@
 										</span>
 										<div>
 											<span class="font-weight-bold text-dark">
-												Order's Recevied</span>
+												Message Recevied</span>
 											<div class="small text-muted d-flex">1 hour ago</div>
 										</div>
 									</a>
@@ -315,32 +285,6 @@
 										<path d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z" />
 									</svg></i>
 							</a>
-						</div>
-						<div class="dropdown main-profile-menu">
-							<a class="d-flex" href="#">
-								<span class="main-img-user"><img alt="avatar" src="../../assets/img/users/9.jpg" /></span>
-							</a>
-							<div class="dropdown-menu">
-								<div class="header-navheading">
-									<h6 class="main-notification-title">Alexandra Churchill</h6>
-									<p class="main-notification-text">Web Designer</p>
-								</div>
-								<a class="dropdown-item border-top" href="profile.html">
-									<i class="fe fe-user"></i> My Profile
-								</a>
-								<a class="dropdown-item" href="profile.html">
-									<i class="fe fe-edit"></i> Edit Profile
-								</a>
-								<a class="dropdown-item" href="profile.html">
-									<i class="fe fe-settings"></i> Account Settings
-								</a>
-								<a class="dropdown-item" href="lockscreen.html">
-									<i class="fe fe fe-unlock"></i> Lock screen
-								</a>
-								<a class="dropdown-item" href="signin.html">
-									<i class="fe fe-power"></i> Sign Out
-								</a>
-							</div>
 						</div>
 						<button class="navbar-toggler navresponsive-toggler" type="button" data-toggle="collapse"
 							data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
