fix small errors

--- a/faq.html
+++ b/faq.html
@@ -571,7 +571,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<span>Copyright © 2021 <a href="index.html">EgyptMiners All rights
+							<span>Copyright © 2021 <a href="index.html">EgyMiners Pool All rights
 									reserved.</span>
 						</div>
 					</div>
