--- a/blocks.html
+++ b/blocks.html
@@ -166,6 +166,11 @@
 							<a class="nav-link" href="miners.html"><i class="fas fa-users sidemenu-icon"></i><span
 									class="sidemenu-label">Miners</span></a>
 						</li>
+
+						<li class="nav-item">
+							<a class="nav-link" href="pool.html"><i class="fas fa-info-circle sidemenu-icon"></i><span
+									class="sidemenu-label">Pool</span></a>
+						</li>
 						<!-- <li class="nav-item">
 							<a class="nav-link" href="api.html"><i class="fas fa-project-diagram sidemenu-icon"></i><span
 									class="sidemenu-label">API</span></a>
