--- a/pool.html
+++ b/pool.html
@@ -453,59 +453,34 @@
 						<!-- Page Header -->
 						<div class="page-header">
 							<div class="page-header-1">
-								<h1 class="main-content-title tx-30">Help</h1>
+								<h1 class="main-content-title tx-30">Pool</h1>
 								<ol class="breadcrumb">
-									<li class="breadcrumb-item active" aria-current="page">Getting Started</li>
+									<li class="breadcrumb-item active" aria-current="page">Let's Get Started</li>
 								</ol>
 							</div>
 						</div>
 						<!-- End Page Header -->
 
 						<!-- Row -->
-						<div class="row">
-							<div class="col-lg-6 col-md-12">
-								<div class="card">
-									<div class="card-body">
-										<div>
-											<h6 class="main-content-label mb-1">Miner Configuration Generator</h6>
-											<p class="text-muted card-sub-title">Generate your configuration.</p>
+						<div class="card" id="link-alerts">
+							<div class="card-body">
+								<div>
+									<h6 class="main-content-label mb-1">Quick Start - pool servers and ports:</h6>
+									
+								</div>
+								<div class="text-wrap">
+									<div class="example">
+										
+										<div class="alert alert-solid-success" role="alert">
+											stratum+tcp://rvn.EgyMiners.com:1008 lowdiff EU
 										</div>
-										<div class="">
-											<div class="row row-xs align-items-center mg-b-20">
-												<div class="col-md-4">
-													<label class="mg-b-0">Coin</label>
-												</div>
-												<div class="col-md-8 mg-t-5 mg-md-t-0">
-													<input class="form-control" placeholder="Ravencoin" type="text">
-												</div>
-											</div>
-											<div class="row row-xs align-items-center mg-b-20">
-												<div class="col-md-4">
-													<label class="mg-b-0">Miner</label>
-												</div>
-												<div class="col-md-8 mg-t-5 mg-md-t-0">
-													<input class="form-control" placeholder="T-rex (Nvidia)" type="text">
-												</div>
-											</div>
-											<div class="row row-xs align-items-center mg-b-20">
-												<div class="col-md-4">
-													<label class="mg-b-0">Wallet*</label>
-												</div>
-												<div class="col-md-8 mg-t-5 mg-md-t-0">
-													<input class="form-control" placeholder="Wallet Address" type="text">
-												</div>
-											</div>
-											</div>
-											<div class="form-group row justify-content-end mb-0">
-												<div class="col-md-8 pl-md-2">
-													<button class="btn ripple btn-primary pd-x-30 mg-r-5">Generate</button>
-													<button class="btn ripple btn-secondary pd-x-30">Cancel</button>
-												</div>
-											</div>
+										<div class="alert alert-solid-success" role="alert">
+											stratum+tcp://rvn.EgyMiners.com:1256 highdiff EU
 										</div>
 									</div>
 								</div>
 							</div>
+						</div>
 						</div>
 						<!-- End Row -->
 
